--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,24 @@ body {
 	border: solid 4px green;
 	margin-bottom: 10px;
 	margin-right: 10px;
-	background-color: white;
+/*	background-color: white;*/
 	border-radius: 5px;
 	
+}
+
+.bg-red {
+	background-color: red;
+	
+}
+
+.bg-white {
+	background-color: white;
+
+}
+
+.bg-black {
+	background-color: black;
+
 }
 
 /*ul {
@@ -57,6 +72,12 @@ img {
     margin-left: auto;
     margin-right: auto;
 
+}
+
+.attackBtn {
+	vertical-align: middle;
+	margin-top: 80px;
+	
 }
 
 .characterClick {
