game update/improvements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,10 @@ img {
 	
 }
 
+#attackText {
+	font-size: 25px;
+}
+
 #characterList {
 
 },
@@ -108,6 +112,7 @@ img {
 },
 
 #yourCharacter {
+
 
 },
 
