--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,13 @@ body {
 
 
 }
+@font-face {
+	font-family: STJEDISE;
+	src: url(star_jedi/stjedise/STJEDISE.TTF);
+}
+h1 {
+	font-family: STJEDISE;
+}
 .modal-body {
 	color: black;
 }
